[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_coinbase"
version = "0.1.0"
description = "Coinbase exchange plugin for bt_api framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"},
]
keywords = [
    "bt_api",
    "coinbase",
    "exchange",
    "trading",
    "crypto",
    "spot",
    "btc",
    "ethereum",
    "advanced trade api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_coinbase"
Documentation = "https://bt-api-coinbase.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_coinbase"
Issues = "https://github.com/cloudQuant/bt_api_coinbase/issues"
Changelog = "https://github.com/cloudQuant/bt_api_coinbase/releases"
"CI" = "https://github.com/cloudQuant/bt_api_coinbase/actions"
"PyPI" = "https://pypi.org/project/bt_api_coinbase/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DTZ", "T10", "ISC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true